[package]
name = "mcp-proxy"
version = "0.1.1"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "c1c4c9a0c9afbfbbf9eb42d6f8b00d8546fbdc2c", features = [
    "server",
    "client",
    "reqwest",
    "client-side-sse",
    "transport-sse-client",
    "transport-streamable-http-client",
    "transport-worker",
    "transport-child-process"
] }
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
uuid = { version = "1.6", features = ["v7", "fast-rng"] }
futures = "0.3.31"
tokio-util = "0.7.15"
reqwest = { version = "0.12", features = ["json", "stream"] }

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[dev-dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "c1c4c9a0c9afbfbbf9eb42d6f8b00d8546fbdc2c", features = [
    "server",
    "client",
    "reqwest",
    "client-side-sse",
    "transport-sse-client",
    "transport-sse-server",
    "transport-child-process",
    "transport-streamable-http-server",
    "macros"
] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
