[package]
name = "mcp-proxy"
version = "0.2.3"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/SteffenDE/mcp-rust-sdk.git", branch = "sd-bad-request", features = [
    "server",
    "client",
    "reqwest",
    "client-side-sse",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-worker",
    "transport-child-process",
] }
clap = { version = "4.5.37", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
uuid = { version = "1.6", features = ["v7", "fast-rng"] }
futures = "0.3.31"
tokio-util = "0.7.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
http-serde = "2.1.1"
serde_json = "1.0.145"

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[dev-dependencies]
rmcp = { git = "https://github.com/SteffenDE/mcp-rust-sdk.git", branch = "sd-bad-request", features = [
    "server",
    "client",
    "reqwest",
    "client-side-sse",
    "transport-sse-client-reqwest",
    "transport-sse-server",
    "transport-child-process",
    "transport-streamable-http-server",
    "macros",
] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
